--- a/src/pages/products/productsheader.css
+++ b/src/pages/products/productsheader.css
@@ -2,8 +2,9 @@
   background-color: #c5c1c1;
   color: white;
   cursor: pointer;
-  margin-right: 15px;
-  font-size: 33px;
+  margin-right: 10px;
+  width: 33px;
+  height: 30px;
   transition: 0.5s;
   -webkit-transition: 0.5s;
   -moz-transition: 0.5s;
