--- a/src/pages/products/productsheader.css
+++ b/src/pages/products/productsheader.css
@@ -5,6 +5,7 @@
   margin-right: 10px;
   width: 33px;
   height: 30px;
+  padding: 2px;
   transition: 0.5s;
   -webkit-transition: 0.5s;
   -moz-transition: 0.5s;
