increse item until stock

--- a/src/components/addToCart/addToCart.css
+++ b/src/components/addToCart/addToCart.css
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  user-select: none;
   border-radius: 1px;
   -webkit-border-radius: 1px;
   -moz-border-radius: 1px;
