--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,12 @@ body {
   font-size: 14px;
 }
 
+.trim-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 a {
   text-decoration: none !important;
   color: unset !important;
@@ -45,17 +51,16 @@ ul {
   margin: 0 !important;
   padding: 0 !important;
 }
+img {
+  user-select: none;
+}
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 7px;
 }
 ::-webkit-scrollbar-thumb {
   background-color: var(--blue-color);
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
+  border-radius: 4px;
 }
 ::-webkit-scrollbar-track {
   background-color: white;
