--- a/src/pages/products/catList/catlist.css
+++ b/src/pages/products/catList/catlist.css
@@ -12,11 +12,8 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.105);
 }
 .cat-list > div {
-  transition: 0.4s;
-  -webkit-transition: 0.4s;
-  -moz-transition: 0.4s;
-  -ms-transition: 0.4s;
-  -o-transition: 0.4s;
+  transition: 0.1s;
+  cursor: pointer;
 }
 .cat-list > div label {
   width: 100%;
