--- a/src/pages/products/productsList/productsList.css
+++ b/src/pages/products/productsList/productsList.css
@@ -1,12 +1,12 @@
 .products-list {
-  .product-grid-4 {
+  .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
     gap: 20px;
     align-items: flex-start;
   }
 
-  .product-grid-1 {
+  .no-grid {
     display: grid;
     gap: 20px;
 
